--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #f5f5f8;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #4a4b4b;
 }
 
 body{
