--- a/src/index.css
+++ b/src/index.css
@@ -2,24 +2,25 @@
   font-family:  "Turret Road", sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --corDoFundo:  #282728;
+  --corDaFonte:  #fff;
+  --corDaFonteHover:  #4a4b4b;
+  background:var(--corDoFundo);
 }
 
 a {
   font-weight: 500;
-  color: #f5f5f8;
+  color: var(--corDaFonte);
   text-decoration: inherit;
 }
 a:hover {
-  color: #4a4b4b;
+  color:var(--corDaFonteHover);
 }
 
 body{
