--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ h1 {
 p {
   font-weight: bold;
   letter-spacing: 1px;
+  color: var(--cinzaEscuro);
 }
 a {
   font-weight: 500;
@@ -38,4 +39,16 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+
+}
+h1{
+  color: #e0dede;
+}
+h2{
+  color: #070707;
+  text-shadow: -2px 2px 4px rgb(249, 246, 246);
+}
+p{
+  color: #333333;
 }
