--- a/src/index.css
+++ b/src/index.css
@@ -16,15 +16,18 @@
   --roxoPadrao: #800080;
   --corDaFonte: #fff;
   --corDaFonteHover: #4a4b4b;
-  background: var(--cinza);
+
+ 
+
 }
+
 h1 {
   text-shadow: -2px 2px 4px black;
 }
 p {
   font-weight: bold;
   letter-spacing: 1px;
-  color: var(--cinzaEscuro);
+
 }
 a {
   font-weight: 500;
@@ -39,16 +42,16 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
+ 
 
 }
 h1{
-  color: #e0dede;
+  color:var(--bg-color);
 }
 h2{
-  color: #070707;
+  color:var(--text-color);
   text-shadow: -2px 2px 4px rgb(249, 246, 246);
 }
 p{
-  color: #333333;
+  color:var(--text-color);
 }
